[package]
name = "yixuan-dbgate-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
ureq.workspace = true
futures = "0.3.30"

const_format.workspace = true
serde.workspace = true
serde_json5.workspace = true
thiserror.workspace = true

rand.workspace = true
tracing.workspace = true

common.workspace = true
yixuan-proto.workspace = true
yixuan-models.workspace = true
yixuan-service.workspace = true
